05/ 12. 常见应用-路由切换动画2

--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/12. 常见应用-路由切换动画.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/12. 常见应用-路由切换动画.md
@@ -69,662 +69,203 @@
 
     ![](assets/46.png)
 
-2. 自定义RouterGuard组件，使用高阶路由组件withRouter包裹（注入路由上下文history对象），使用此组件
+2. 分析需求：当地址路径变化时，旧的页面也要加载（通过动画让其消失）。 
 
-    ```jsx
-    import React, { Component } from "react";
-    import { withRouter } from "react-router-dom";
-    
-    class RouterGuard extends Component {
-      render() {
-        return <div>{this.props.children}</div>;
-      }
-    }
-    
-    export default withRouter(RouterGuard);
-    ```
+    Route组件的component和render属性：需要路由路径完全匹配是才会加载。
+
+    Route组件的children属性： 不管路由路径是不是匹配都会加载
+
+    1. children属性值可以是字符串
 
     ```jsx
     export default function App() {
       return (
-        <Router>
-          <div className="container">
-            <ul>
-           ...
-            </ul>
-            <RouterGuard>
-              <div className="box">
-                <Switch>
-                  <Route path="/page1" component={Page1} />
-                  <Route path="/page2" component={Page2} />
-                </Switch>
-              </div>
-            </RouterGuard>
-          </div>
-        </Router>
-      );
-    }
-    ```
-
-    
-
-3. 探讨history对象的高级事件
-
-​	history对象提供2个高级事件：listen和block，用来监听路径地址的变化
-
-- listen: 添加一个监听器，监听地址的变化，当地址发生变化时，会调用传递的函数
-  
-  ```jsx
-  class RouterGuard extends Component {
-    componentDidMount() {
-      this.props.history.listen(() => {
-        console.log("地址变化了！！");
-      });
-    }
-    render() {
-      return <div>{this.props.children}</div>;
-    }
-  }
-  
-  export default withRouter(RouterGuard);
-  
-  ```
-  
-  ![](assets/33.png)
-  
-  - 参数：函数，运行时间点：发生在即将跳转到新页面时
-    
-    - 这个函数本身的参数：
-    
-    - 参数1：location对象，记录当前的地址信息
-    
-    - 参数2：action，一个字符串，表示进入该地址的方式
-      - POP：出栈
-        - 通过点击浏览器后退、前进
-        - 调用history.go
-        - 调用history.goBack
-        - 调用history.goForward
-      - PUSH：入栈
-        - history.push
-      - REPLACE：替换
-        - history.replace
-    
-      ![](assets/34.png)
-    
-  - 返回结果：函数，可以调用该函数取消监听
-  
-  - 说明：
-  
-      - 监听到地址变化后，做什么事情呢？由于RouterGuard组件是一个自定义的通用组件，所以此组件不会制定监听之后的具体的动作，需要使用此组件是传递一个事件属性（定义了不同的动作）
-  
-          ```jsx
-          export default function App() {
-            return (
-              <Router>
-                <div className="container">
-              ...
-                  <RouterGuard
-                    onChange={(prevLocation, locaction, action) =>
-                      console.log(
-                        `日志：路径变化了，路径从${prevLocation.pathname}跳转到${locaction.pathname}, 跳转的类型是:${action}`
-                      )
-                    }
-                  >
-                ...
-                  </RouterGuard>
-                </div>
-              </Router>
-            );
-          }
-          ```
-  
-          ```jsx
-          class RouterGuard extends Component {
-            componentDidMount() {
-              // 当前的location对象就是监听地址路径变化之前的
-              const prevLocation = this.props.history.location;
-              this.props.history.listen((location, action) => {
-                // 监听之后的location就是地址路径变化后新的
-                // console.log("地址变化了！！");
-                // console.log(location);
-                // console.log(action);
-                if (this.props.onChange) {
-                  this.props.onChange(prevLocation, location, action);
-                }
-              });
-            }
-            render() {
-              return <div>{this.props.children}</div>;
-            }
-          }
-          
-          export default withRouter(RouterGuard);
-          ```
-  
-          ![](assets/35.png)
-  
-      - 取消监听，可以在组件卸载时取消，也可以把取消权限转交出去给使用者
-  
-          ```jsx
-          class RouterGuard extends Component {
-            componentDidMount() {
-              const prevLocation = this.props.history.location;
-              this.unListen = this.props.history.listen((location, action) => {
-                if (this.props.onChange) {
-                  // 将取消监听的权限交个使用者
-                  this.props.onChange(prevLocation, location, action, this.unListen);
-                }
-              });
-            }
-            // 组件卸载时取消监听
-            componentWillUnmount() {
-              this.unListen();
-            }
-            render() {
-              return <div>{this.props.children}</div>;
-            }
-          }
-          
-          export default withRouter(RouterGuard);
-          ```
-  
-          ```jsx
-          export default function App() {
-            return (
-              <Router>
-                <div className="container">
-               ...
-                  <RouterGuard
-                    onChange={(prevLocation, locaction, action, unListen) => {
-                      count++;
-                      console.log(
-                        `count:${count},日志：路径变化了，路径从${prevLocation.pathname}跳转到${locaction.pathname}, 跳转的类型是:${action}`
-                      );
-                      if (count >= 5) {
-                        console.log(`count:${count},日志：监听即将被取消`);
-                        unListen();
-                      }
-                    }}
-                  >
-                  ...
-                  </RouterGuard>
-                </div>
-              </Router>
-            );
-          }
-          ```
-  
-          ![](assets/36.png)
-  
-      - 监听器不能控制页面能不能跳转，想要设置页面的跳转，可以设置阻塞
-  
-- block：设置阻塞
-  
-  - 设置一个阻塞，并同时设置阻塞消息，页面跳转前会弹出阻塞消息
-  
-    ```jsx
-    class RouterGuard extends Component {
-      componentDidMount() {
-        /* ---------------------- 1. 使用监听器 ---------------------- */
-        const prevLocation = this.props.history.location;
-        this.unListen = this.props.history.listen((location, action) => {
-          if (this.props.onChange) {
-            this.props.onChange(prevLocation, location, action, this.unListen);
-          }
-        });
-    
-        /* ---------------------- 2. 设置一个阻塞 --------------------- */
-        this.props.history.block("真的要跳转页面吗？");
-      }
-      // 组件卸载时取消监听
-      componentWillUnmount() {
-        this.unListen();
-      }
-      render() {
-        return <div>{this.props.children}</div>;
-      }
-    }
-    ```
-  
-    ![](assets/37.png)
-  
-  - 当页面发生跳转时，会进入阻塞，并将阻塞消息传递到路由根组件的getUserConfirmation方法。
-  
-    ```jsx
-    export default function App() {
-      return (
-        <Router
-         getUserConfirmation={(msg) => {
-            console.log(`想要跳转页面，没门！阻塞消息是：${msg}`);
-          }}
-        >
-          <div className="container">
-          ...
-          </div>
-        </Router>
-      );
-    }
-    
-    ```
-  
-    ![](assets/38.png)
-  
-    说明：默认的是会弹出对话框，当自定义时（比如上面的` console.log("想要跳转页面，没门！");` ), 不会弹出对话框
-  
-  - 返回一个回调函数，用于取消阻塞器
-
-
-路由根组件
-
-- getUserConfirmation
-  - 参数：函数
-    - 参数1：阻塞消息
-      - 字符串消息
-      - 函数，函数的返回结果是一个字符串，用于表示阻塞消息
-        - 参数1：location对象
-        - 参数2：action值
-      
-    - 参数2：回调函数，调用该函数并传递true，则表示进入到新页面，否则，不做任何操作
-    
-        ```jsx
-        export default function App() {
-          return (
-            <Router
-            getUserConfirmation={(msg, callback) => {
-                console.log(`想要跳转页面，没门！阻塞消息是：${msg}`);
-                // 设置true - 可以调转
-                callback(true);
-                // 默认或者设置false - 不可以跳转
-                callback(false);
-              }}
-            >
-              <div className="container">
-              ...
-              </div>
-            </Router>
-          );
-        }
-        ```
-    
-        ![](assets/39.png)
-
-
-
-同时添加监听器和阻塞器
-
-1. 重新调整组件结构（由于阻塞器函数getUserConfirmation在根路由中，需要将根路由<Router>组件从App移到自定义RouterGuard中
-
-    ```jsx
-    import React, { Component } from "react";
-    import { BrowserRouter as Router, withRouter } from "react-router-dom";
-    
-    class RouterGuard extends Component {
-      render() {
-        return (
-          <Router
-          >
-            {this.props.children}
-          </Router>
-        );
-      }
-    }
-    
-    export default RouterGuard;
-    ```
-
-    ```jsx
-    ...
-    export default function App() {
-      return (
-        <RouterGuard>
-          <div className="container">
-            <ul>
-              <li>
-                <Link to="/page1">Page1</Link>
-              </li>
-              <li>
-                <Link to="/page2">Page2</Link>
-              </li>
-            </ul>
-    
-            <div className="box">
-              <Switch>
-                <Route path="/page1" component={Page1} />
-                <Route path="/page2" component={Page2} />
-              </Switch>
+        <div className="main">
+          <Router>
+            <Pages.NavBar />
+            <div className="page-container">
+              <Route path="/" exact>
+                lorem ipsum dolor sit amet, consectetur adip
+              </Route>
+              <Route path="/news" exact component={Pages.News} />
+              <Route path="/personal" exact component={Pages.Personal} />
             </div>
-          </div>
-        </RouterGuard>
+          </Router>
+        </div>
       );
     }
-    
     ```
 
-    
+    ![](assets/47.png)
 
-2. 由于RouterGuard包含根根路由<Router>组件，所以不能直接使用withRouter获取上下文对象
-
-3. 自定义一个辅助组件_HelpRouter( 不返回任何内容)，专门用来使用withRouter获取上下文对象, 并添加阻塞消息
+    2. children属性值也可以是一个函数，并且次函数的参数就是当前的上下文history对象，可以返回对应的组件
 
     ```jsx
-    import React, { Component } from "react";
-    import { BrowserRouter as Router, withRouter } from "react-router-dom";
-    
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 设置一个阻塞 --------------------- */
-        this.props.history.block("真的要跳转页面吗？");
-      }
-      render() {
-        return null;
-      }
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    
-    class RouterGuard extends Component {
-      render() {
-        return (
-          <Router
-            getUserConfirmation={(msg) => {
-              console.log(msg);
-            }}
-          >
-            <HelpRouter />
-            {this.props.children}
-          </Router>
-        );
-      }
-    }
-    
-    export default RouterGuard;
-    ```
-
-    
-
-4. 将如何设置阻塞器跳转页面的权限交给使用者
-
-    ```jsx
-    import React, { Component } from "react";
-    import { BrowserRouter as Router, withRouter } from "react-router-dom";
-    
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 设置一个阻塞 --------------------- */
-        this.props.history.block("真的要跳转页面吗？");
-      }
-      render() {
-        return null;
-      }
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    
-    class RouterGuard extends Component {
-      handleChange = (callback) => {
-        this.props.onBeforeChange && this.props.onBeforeChange(callback);
-      };
-      render() {
-        return (
-          <Router
-            getUserConfirmation={(msg, callback) => {
-              this.handleChange(callback);
-            }}
-          >
-            <HelpRouter />
-            {this.props.children}
-          </Router>
-        );
-      }
-    }
-    
-    export default RouterGuard;
-    ```
-
-    ```jsx
-    ...
     export default function App() {
       return (
-        <RouterGuard
-          onBeforeChange={(callback) => {
-            console.log(`想要跳转页面`);
-            callback(true);
-          }}
-        >
-       ...
-        </RouterGuard>
+        <div className="main">
+          <Router>
+            <Pages.NavBar />
+            <div className="page-container">
+              <Route path="/" exact>
+              {/*1. children属性可以是字符串 */}
+              {/* lorem ipsum dolor sit amet, consectetur adip */}
+              {/* 2. children属性也可以是一个函数，返回字符串或者组件  */}
+                {(history) => {
+                  console.log(history);
+                  return "lorem ipsum dolor sit amet, consectetur adip";
+                }}
+              </Route>
+           ...
+            </div>
+          </Router>
+        </div>
       );
     }
     ```
 
-    ![](assets/40.png)
+    ![](assets/48.png)
 
-5. 对于设置阻塞消息block，参数也可以是一个函数，这个参数函数自身也有2个参数location和action
-
-    ```jsx
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 设置一个阻塞 --------------------- */
-        this.props.history.block((location, action) => {
-          console.log(location);
-          console.log(action);
-          return "真的要跳转页面吗？";
-        });
-      }
-      render() {
-        return null;
-      }
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    ```
-
-    ![](assets/41.png)
-
-6. 如何将这些上下文对象传递给使用者？？- 使用全局变量保存，再传递
+3. 路由路径匹配时，match对象有值，不匹配是match为null。 
 
     ```jsx
-    let prevLocation, location, action;
-    
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 设置一个阻塞 --------------------- */
-        this.props.history.block((loc, ac) => {
-          prevLocation = this.props.location;
-          location = loc;
-          action = ac;
-          return "真的要跳转页面吗？";
-        });
-      }
-    ...
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    
-    class RouterGuard extends Component {
-      handleChange = (callback) => {
-        this.props.onBeforeChange &&
-          this.props.onBeforeChange(prevLocation, location, action, callback);
-      };
-      render() {
-        return (
-        ...
-        );
-      }
-    }
-    ```
-
-    ```jsx
-     <RouterGuard
-          onBeforeChange={(prevLoc, curLoc, action, callback) => {
-            console.log(
-              `想要跳转页面: 从页面${prevLoc.pathname}跳转到${curLoc.pathname},跳转方式是${action} `
-            );
-            callback(true);
-          }}
-        >
-    ...
-        </RouterGuard>
-    ```
-
-    ![](assets/42.png)
-
-7. block返回一个回调函数，用于取消阻塞器
-
-    ```jsx
-    let prevLocation, location, action, unblock;
-    
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 设置一个阻塞 --------------------- */
-        unblock = this.props.history.block((loc, ac) => {
-          prevLocation = this.props.location;
-          location = loc;
-          action = ac;
-          return "真的要跳转页面吗？";
-        });
-      }
-      // 组件卸载-取消阻塞
-      componentWillUnmount() {
-        this.unblock();
-      }
-      render() {
-        return null;
-      }
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    
-    class RouterGuard extends Component {
-      handleChange = (callback) => {
-        if (this.props.onBeforeChange) {
-          this.props.onBeforeChange(
-            prevLocation,
-            location,
-            action,
-            callback,
-            unblock
-          );
-        } else {
-          callback(true);
-        }
-      };
-      render() {
-        return (
-          ...
-        );
-      }
-    }
-    
-    export default RouterGuard;
-    
-    ```
-
-    ```jsx
-    let count = 0;
-    ...
     export default function App() {
       return (
-        <RouterGuard
-          onBeforeChange={(prevLoc, curLoc, action, callback, unblock) => {
-            count++;
-            console.log(
-              `count:${count},想要跳转页面: 从页面${prevLoc.pathname}跳转到${curLoc.pathname},跳转方式是${action} `
-            );
-            callback(true);
-            // 设置取消阻塞的条件
-            if (count === 5) {
-              console.log(`count是5，取消阻塞 `);
-              unblock();
-            }
-          }}
-        >
-          <div className="container">
-          ...
-          </div>
-        </RouterGuard>
+        <div className="main">
+          <Router>
+            <Pages.NavBar />
+            <div className="page-container">
+              <Route path="/" exact>
+                {({ match }) => {
+                  if (match) {
+                    console.log("路由路径匹配了！");
+                  } else {
+                    console.log("路由路径没有匹配！");
+                  }
+                  return "asfasdf";
+                }}
+              </Route>
+             ...
+            </div>
+          </Router>
+        </div>
       );
     }
     ```
 
-    ![](assets/43.png)
+    ![](assets/49.png)
 
-8. 添加监听器
+4. 因此，可以判断match是否为空（路由路径有没有匹配）来控制CSSTransition组件的进入退出的开关（in 属性）
+
+    使用CSSTransition组件，配置动画属性
 
     ```jsx
-    let prevLocation, location, action, unblock;
+    ...
+    import { CSSTransition } from "react-transition-group";
+    import "animate.css";
     
-    class _HelpRouter extends Component {
-      componentDidMount() {
-        /* ---------------------- 1. 设置一个阻塞 --------------------- */
-        unblock = this.props.history.block((loc, ac) => {
-          prevLocation = this.props.location;
-          location = loc;
-          action = ac;
-          return "真的要跳转页面吗？";
-        });
-    
-        /* ---------------------- 2. 添加监听器 ---------------------- */
-        // 当前的location对象就是监听地址路径变化之前的
-        this.unListen = this.props.history.listen((location, action) => {
-          if (this.props.onChange) {
-            // 将取消监听的权限交个使用者
-            this.props.onChange(prevLocation, location, action, this.unListen);
-          }
-        });
-      }
-      // 组件卸载
-      componentWillUnmount() {
-        // 取消阻塞
-        unblock();
-        // 取消监听器
-        this.unListen();
-      }
-      render() {
-        return null;
-      }
-    }
-    const HelpRouter = withRouter(_HelpRouter);
-    
-    class RouterGuard extends Component {
-      ...
-      };
-      render() {
-        return (
-          <Router
-            getUserConfirmation={(msg, callback) => {
-              this.handleChange(callback);
-            }}
-          >
-            <HelpRouter onChange={this.props.onChange} />
-            {this.props.children}
+    export default function App() {
+      return (
+        <div className="main">
+          <Router>
+            <Pages.NavBar />
+            <div className="page-container">
+              <Route path="/" exact>
+                {({ match }) => {
+                  return (
+                    <CSSTransition
+                      in={match ? true : false}
+                      timeout={3000}
+                    classNames={{
+                  	enter: "animate__animated slower animate__fadeInLeft",
+                  	exit: "animate__animated slower animate__fadeOutRight",
+                }}
+                      // 当进入（in=ture）是挂载内部的子组件
+                      mountOnEnter={true}
+                      // 当退出（in=false）时卸载内部的子组件
+                      unmountOnExit={true}
+                    >
+                      {Pages.Home}
+                    </CSSTransition>
+                  );
+                }}
+              </Route>
+         ...
+            </div>
           </Router>
-        );
-      }
+        </div>
+      );
     }
+    ```
+
+    ![](assets/50.png)
+
+5. 封装通用的动画路由组件, 并使用
+
+    ```jsx
+    import React from "react";
+    import { Route } from "react-router-dom";
+    import { CSSTransition } from "react-transition-group";
+    import "animate.css";
     
-    export default RouterGuard;
+    export default function AnimationRoute({
+      component: Component,
+      children,
+      ...rest
+    }) {
+      return (
+        <Route {...rest}>
+          {({ match }) => {
+            return (
+              <CSSTransition
+                in={match ? true : false}
+                timeout={3000}
+                classNames={{
+                  enter: "animate__animated slower animate__fadeInLeft",
+                  exit: "animate__animated slower animate__fadeOutRight",
+                }}
+                // 当进入（in=ture）是挂载内部的子组件
+                mountOnEnter={true}
+                // 当退出（in=false）时卸载内部的子组件
+                unmountOnExit={true}
+              >
+                {Component}
+              </CSSTransition>
+            );
+          }}
+        </Route>
+      );
+    }
     
     ```
 
     ```jsx
-       <RouterGuard
-          onBeforeChange={(prevLoc, curLoc, action, callback, unblock) => {
-            console.log(
-              `阻塞器日志：想要跳转页面: 从页面${prevLoc.pathname}跳转到${curLoc.pathname},跳转方式是${action} `
-            );
-            callback(true);
-            // 设置取消阻塞的条件
-            unblock();
-          }}
-          onChange={(prevLocation, locaction, action, unListen) => {
-            console.log(
-              `监听器日志：路径变化了，路径从${prevLocation.pathname}跳转到${locaction.pathname}, 跳转的类型是:${action}`
-            );
-            unListen();
-          }}
-        >
+    import React from "react";
+    import * as Pages from "./Pages";
+    import { BrowserRouter as Router } from "react-router-dom";
+    import "./App.css";
+    import AnimationRoute from "./AnimationRoute";
+    
+    export default function App() {
+      return (
+        <div className="main">
+          <Router>
+            <Pages.NavBar />
+            <div className="page-container">
+              <AnimationRoute path="/" exact component={Pages.Home} />
+              <AnimationRoute path="/news" exact component={Pages.News} />
+              <AnimationRoute path="/personal" exact component={Pages.Personal} />
+            </div>
+          </Router>
+        </div>
+      );
+    }
+    
     ```
 
-    ![](assets/44.png)
-
-9. 基本流程图
-
-    ![](assets/45.png)
-
     
+
+6. 特别注意：<AnimationRoute>外部不能再使用Switch组件包裹
+
+    因为使用Switch后，路径配到到一个之后，就不在匹配其他的组件，这导致其他的组件不让渲染，从而导致动画效果失效
+
