--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/07. Redux/markdown/01. Redux核心概念.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/07. Redux/markdown/01. Redux核心概念.md
@@ -8,7 +8,7 @@ action  reducer  store
 
 **传统的服务器端的MVC**
 
-![](assets/2019-08-20-13-18-58.png)
+![](assets/01.png)
 
 环境：
 
@@ -22,7 +22,7 @@ action  reducer  store
 
 为了降低处理这个过程的复杂度，出现了MVC模式。
 
-![](assets/2019-08-20-13-29-14.png)
+![](assets/02.png)
 
 **Controller**: 处理请求，组装这次请求需要的数据
 **Model**：需要用于UI渲染的数据模型
@@ -81,4 +81,4 @@ var deleteAction = {
 
 reducer：处理器，用于根据action来处理数据，处理后的数据会被仓库重新保存。
 
-![](assets/2019-08-20-14-23-05.png)
+![](assets/03.png)
