07 / 02. 使用Redux管理数据

--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/14. 常见应用-阻止跳转.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/14. 常见应用-阻止跳转.md
@@ -1,58 +1,46 @@
-### 阻止跳转
+### 滚动条复位
 
 1. #### 准备基础组件： 使用到上节课中的动画路由组件
 
     ```jsx
     import "./Pages.css";
     import React from "react";
-    import { NavLink, withRouter } from "react-router-dom";
+    import { NavLink } from "react-router-dom";
     
     export function NavBar() {
       return (
         <div className="header">
-          <NavLink to="/" exact>首页</NavLink>
-          <NavLink to="/news" exact>新闻页</NavLink>
+          <NavLink to="/" exact>
+            首页
+          </NavLink>
+          <NavLink to="/news" exact>
+            新闻页
+          </NavLink>
         </div>
       );
     }
     
-    function Home() {
+    export function Home() {
       return (
         <div className="page home">
           <h1>首页</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora,
-            dignissimos tenetur. Reprehenderit eum quod itaque repudiandae,
-            perspiciatis nam inventore asperiores.
+       ...
           </p>
         </div>
       );
     }
     
-    class News extends React.Component {
-      state = {
-        val: "",
-      };
-      render() {
-        return (
-          <div className="page news">
-            <h1>新闻页</h1>
-            <textarea
-              value={this.state.val}
-              onChange={(e) => {
-                this.setState({
-                  ...this.state,
-                  val: e.target.value,
-                });
-              }}
-            ></textarea>
-          </div>
-        );
-      }
+    export function News() {
+      return (
+        <div className="page news">
+          <h1>新闻页</h1>
+          <p>
+        ...
+          </p>
+        </div>
+      );
     }
-    export const HomePage = Home;
-    export const NewsPage = withRouter(News);
-    
     ```
 
     ```jsx
@@ -75,193 +63,43 @@
     }
     ```
 
-2. #### 需求：当表单域有内容，如果跳转页面到首页，表单域的内容会丢失，所以需要设置阻塞，提示用户是否跳转
+2. #### 实现滚动条的方式：使用高阶组件，使用useEffect，使用自定义的导航守卫
 
-3. #### 新闻页组件添加阻塞
+3. #### 使用高阶组件
 
-    1. 新闻页设置阻塞消息: 如果文本内容有值且当前没有阻塞，添加阻塞
+    定义一个高阶组件，统一封装滚动条的复位功能
 
-        ```jsx
-        ...
-        class News extends React.Component {
-          state = {
-            val: "",
-          };
-        
-          componentWillUnmount() {
-            // 取消阻塞
-            if (this.unBlock) {
-              this.unBlock();
-            }
-          }
-        
-          handleBlock = (value) => {
-            if (value && !this.unBlock) {
-              // 如果文本内容有值且当前没有阻塞，添加阻塞
-              this.unBlock = this.props.history.block(() => {
-                return "页面跳转，文本内容会消失，真的要调转吗？";
-              });
-            } else if (!value && this.unBlock) {
-              // 取消阻塞
-              this.unBlock();
-              this.unBlock = null;
-            }
-          };
-        
-          render() {
-            return (
-              <div className="page news">
-                <h1>新闻页</h1>
-                <textarea
-                  value={this.state.val}
-                  onChange={(e) => {
-                    this.setState({
-                      ...this.state,
-                      val: e.target.value,
-                    });
-                    this.handleBlock(e.target.value);
-                  }}
-                ></textarea>
-              </div>
-            );
-          }
-        }
-        
-        export const HomePage = Home;
-        export const NewsPage = withRouter(News);
-        ```
-
-    2.  主页:  路由根组件设置阻塞开关
+    1. 简易版
 
         ```jsx
         import React from "react";
-        import { BrowserRouter as Router } from "react-router-dom";
-        import * as Pages from "./pages/Pages";
-        import TransitionRoute from "./components/TransitionRoute";
-        import "./App.css";
         
-        export default function App() {
-          return (
-            <Router
-              getUserConfirmation={(msg, callback) => {
-                callback(window.confirm(msg));
-              }}
-            >
-              <Pages.NavBar />
-              <div className="page-container">
-                <TransitionRoute path="/" exact component={Pages.HomePage} />
-                <TransitionRoute path="/news" exact component={Pages.NewsPage} />
-              </div>
-            </Router>
-          );
-        }
-        ```
-        
-
-4. #### 封装通用的阻塞组件Prompt
-
-    1. 将设置阻塞的功能部分代码，抽离封装成一个通用的组件
-
-        ```jsx
-        import { Component } from "react";
-        import { withRouter } from "react-router-dom";
-        
-        class Prompt extends Component {
-          static defaultProps = {
-            when: false, // when为ture时，设置阻塞
-            message: "", // 阻塞弹窗显示的消息
-          };
-        
-          componentDidMount() {
-            this.handleBlock();
-          }
-          componentDidUpdate() {
-            this.handleBlock();
-          }
-          componentWillUnmount() {
-            // 取消阻塞
-            if (this.unBlock) {
-              this.unBlock();
+        export default function withScrop(Comp) {
+          return class ScropWrapper extends React.Component {
+            componentDidMount() {
+              // 滚动条复原方法1：
+              window.scrollTo(0, 0);
             }
-          }
-          handleBlock = () => {
-            if (this.props.when && !this.unBlock) {
-              // 如果文本内容有值且当前没有阻塞，添加阻塞
-              this.unBlock = this.props.history.block(() => {
-                return this.props.message;
-              });
-            } else if (!this.props.when && this.unBlock) {
-              // 取消阻塞
-              this.unBlock();
-              this.unBlock = null;
+            render() {
+              return (
+                <>
+                  <Comp {...this.props} />
+                </>
+              );
             }
           };
-          render() {
-            return null;
-          }
         }
-        export default withRouter(Prompt);
         
         ```
-
-    2. 组件使用阻塞组件Prompt
 
         ```jsx
         ...
-        import Prompt from "../components/Prompt";
-        ...
-        class News extends React.Component {
-          state = {
-            val: "",
-          };
-        
-          render() {
-            return (
-              <div className="page news">
-                <h1>新闻页</h1>
-                <Prompt
-                  when={this.state.val !== ""}
-                  message={"页面跳转，文本内容会消失，真的要调转吗？"}
-                />
-                <textarea
-                  value={this.state.val}
-                  onChange={(e) => {
-                    this.setState({
-                      ...this.state,
-                      val: e.target.value,
-                    });
-                  }}
-                ></textarea>
-              </div>
-            );
-          }
-        }
-        
-        export const HomePage = Home;
-        export const NewsPage = withRouter(News);
-        
-        ```
-        
-        
-
-5. #### 直接使用react-router-dom已经封装好的阻塞组件Prompt
-
-    1. react-router-dom已经封装了阻塞组件Prompt
-
-        ```jsx
-        import "./Pages.css";
-        import React from "react";
-        import { NavLink, withRouter, Prompt } from "react-router-dom";
+        import withScrop from "../components/withScrop";
         
         export function NavBar() {
           return (
             <div className="header">
-              <NavLink to="/" exact>
-                首页
-              </NavLink>
-              <NavLink to="/news" exact>
-                新闻页
-              </NavLink>
+              ...
             </div>
           );
         }
@@ -269,44 +107,201 @@
         function Home() {
           return (
             <div className="page home">
-              <h1>首页</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora,
-                dignissimos tenetur. Reprehenderit eum quod itaque repudiandae,
-                perspiciatis nam inventore asperiores.
-              </p>
+            ...
             </div>
           );
         }
         
-        class News extends React.Component {
-          state = {
-            val: "",
-          };
+        function News() {
+          return (
+            <div className="page news">
+          ...
+            </div>
+          );
+        }
+        export const HomePage = withScrop(Home);
+        export const NewsPage = withScrop(News);
+        ```
+
+    2. 动画版:  滚动条复位时，有动画过渡效果
+
+        封装setScroll方法
+
+        ```jsx
+        let timer1, timer2; // 先定义2个定时器
         
-          render() {
-            return (
-              <div className="page news">
-                <h1>新闻页</h1>
-                <Prompt
-                  when={this.state.val !== ""}
-                  message={"页面跳转，文本内容会消失，真的要调转吗？"}
-                />
-                <textarea
-                  value={this.state.val}
-                  onChange={(e) => {
-                    this.setState({
-                      ...this.state,
-                      val: e.target.value,
-                    });
-                  }}
-                ></textarea>
-              </div>
-            );
-          }
+        export default function setScroll() {
+          clearInterval(timer1, timer2);
+          const htmlElement = document.documentElement;
+          let { scrollTop, scrollLeft } = htmlElement;
+          timer1 = animate(scrollTop, 0, 500, (value) => {
+            htmlElement.scrollTop = value;
+          });
+          timer2 = animate(scrollLeft, 0, 500, (value) => {
+            htmlElement.scrollLeft = value;
+          });
         }
         
-        export const HomePage = Home;
-        export const NewsPage = withRouter(News);
+        /**
+         * 从一个数过渡到另一个数的函数
+         * @param {*} start 起始位置
+         * @param {*} end 结束为止
+         * @param {*} duration 动画总时长
+         * @param {*} callback 用户传递一个回调函数，将每次变化后的start传递出去
+         */
+        function animate(start, end, duration, callback) {
+          let timer;
+          let curTime = 0;
+          const tick = 16; // 每隔16毫秒执行一次循环
+          const times = Math.ceil(duration / tick); // 总共执行的次数
+          const total = end - start;
+          const step = total / times; // 每次移动的步长
+          timer = setInterval(() => {
+            curTime++;
+            start = start + step;
+            if (curTime === times) {
+              start = end;
+              clearInterval(timer);
+            }
+            callback(start);
+          }, tick);
+          return timer;
+        }
+        
         ```
-    
+
+        调用此方法实现动画效果
+
+        ```jsx
+        import React from "react";
+        import setScroll from "./setScroll";
+        
+        export default function withScrop(Comp) {
+          return class ScropWrapper extends React.Component {
+            componentDidMount() {
+              // 滚动条复原方法2：添加过渡效果
+              setScroll();
+            }
+            render() {
+              return (
+                <>
+                  <Comp {...this.props} />
+                </>
+              );
+            }
+          };
+        }
+        
+        ```
+
+        
+
+4. #### 使用useEffect
+
+    1. 自定义hook： useScroll，并调用封装的setScroll方法
+
+        ```jsx
+        import { useEffect } from "react";
+        import setScroll from "./setScroll";
+        
+        export default function useScroll(pathname) {
+          useEffect(() => {
+            setScroll();
+          }, [pathname]); // 依赖项：路由路径——只有当路径发生变化时，才执行副作用
+        }
+        ```
+
+    2. 使用 useScroll钩子
+
+        ```jsx
+        ...
+        import useScroll from "../components/useScroll";
+        
+        export function NavBar() {
+          return (
+            <div className="header">
+              ...
+            </div>
+          );
+        }
+        
+        function Home(props) {
+          useScroll(props.location.pathname);
+          return (
+            <div className="page home">
+            ...
+            </div>
+          );
+        }
+        
+        function News(props) {
+          useScroll(props.location.pathname);
+          return (
+            <div className="page news">
+          ...
+            </div>
+          );
+        }
+        // 包裹withRouter组件以获取路由上下文对象
+        export const HomePage = withRouter(Home);
+        export const NewsPage = withRouter(News);
+        
+        ```
+
+        
+
+5. #### 使用自定义的导航守卫
+
+    1. 使用之前已经封装好的导航守卫组件**RouterGuard**，利用他的onChange属性，传回来路由上下文信息：prevLocation 和 location
+
+    2. 判断页面跳转时的路径是否变化，在调用setScroll方法实现滚动条的复位
+
+        ```jsx
+        ...
+        export function Home() {
+        
+          return (
+            <div className="page home">
+            ...
+            </div>
+          );
+        }
+        
+        export function News() {
+          return (
+            <div className="page news">
+          ...
+            </div>
+          );
+        }
+        ```
+
+        ```jsx
+        import React from "react";
+        import * as Pages from "./pages/Pages";
+        import "./App.css";
+        import TransitionRoute from "./components/TransitionRoute";
+        import RouterGuard from "./components/RouterGuard";
+        import setScroll from "./components/setScroll";
+        
+        export default function App() {
+          return (
+            <RouterGuard
+              onChange={(prevLocation, location) => {
+                if (prevLocation !== location) {
+                  setScroll();
+                }
+              }}
+            >
+              <Pages.NavBar />
+              <div className="page-container">
+                <TransitionRoute path="/" exact component={Pages.Home} />
+                <TransitionRoute path="/news" exact component={Pages.News} />
+              </div>
+            </RouterGuard>
+          );
+        }
+        
+        ```
+
+    3. 导航守卫组件**RouterGuard**的代码，详见：[11. 常见应用-实现导航守卫](./11.%20常见应用-实现导航守卫.md)
